# icy-sysmonitor

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  main.rs  window.rs
src/views/: home.rs  settings.rs
