[package]
name = "icy-sysmonitor"
version = "0.2.1"
edition = "2021"
description = "A simple system monitor written in Rust using Iced"
readme = "README.md"
license = "MIT"
homepage = "https://ditherwither.github.io/icy-sysmonitor/"
repository = "https://github.com/ditherwither/icy-sysmonitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.2.0"
directories-next = "2.0.0"
iced = { version = "0.8.0", features = ["tokio"] }
iced_aw = "0.4.1"
serde = { version = "1.0.152", features = ["derive"] }
sysinfo = "0.28.1"
toml = "0.7.2"
